# ResumeBase

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/src/: config.py  database.py  decorators.py  dependencies.py  exceptions.py  logging_cfg.py  main.py  schemas.py
backend/src/auth/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/resume/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth.py  test_resume.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.mts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/Auth/: AuthButton.tsx  AuthForm.tsx  AuthLayout.tsx
frontend/src/components/Form/: InputField.tsx
frontend/src/components/Modal/: ConfirmationModal.tsx  Modal.tsx
frontend/src/components/Resume/: ImprovementHistoryModal.tsx  ResumeForm.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/pages/Auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/routes/: AppRouter.tsx  PrivateRoute.tsx
frontend/src/types/: ImprovementHistory.ts  Resume.ts
frontend/src/utils/: Jwt.ts  Network.ts
